# gunsanddiamonds

./: CMakeLists.txt  Makefile
imgs/: ajuda.tga  apresenta.tga  botaomenu.tga  logotipo.tga  muro.tga  recordes.tga
imgs/creditos/: creditos.tga
imgs/frames/: abaixa.tga  anda.tga  atira.tga  bomba.tga  explode.tga  explode2.tga  granada.tga  letras.tga  mendigo.tga  mendigoanda.tga  missel.tga  numeros.tga  parado.tga  pula.tga  queima.tga  recarrega.tga  rocket.tga  rocketeiro.tga  tacabomba.tga  tanque.tga  vira.tga
imgs/gameover/: botaook.tga  gameover.tga  recorde.tga
imgs/jogo/: botaodica.tga  botaopausa.tga  botaovoltamenu.tga  fundo.tga  mira_marca.tga
imgs/joias/: joia1.tga  joia2.tga  joia3.tga  joia4.tga  joia5.tga  joia6.tga  joia7.tga  tapajoias.tga
imgs/menu/: botoesmenu.tga  menu.tga
imgs/mouse/: mira.tga
imgs/opcoes/: botaovolume.tga  opcoes.tga
src/: CMakeLists.txt  alleg.c  almp3.c  almp3.h  aux.c  game.c  gnd.c  gnd.h  intro.c  jogo.c  layer2.c  mainboard.c  recordes.c  visual.c
src/libs/: CMakeLists.txt
src/libs/almp3/: CMakeLists.txt
